Make sure tables don't cause horizontal scrolling for the full page on mobile

--- a/styles/_table.scss
+++ b/styles/_table.scss
@@ -1,5 +1,7 @@
 table {
   border-collapse: collapse;
+  display: block;
+  overflow-x: auto;
   width: 100%;
 }
 
